fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   font-weight: 200;
   padding: 20px 0px;
-  
+  margin: auto;
 }
 .menu-bars {
   width: 30px;
