--- a/src/pages/blog/blog.styles.scss
+++ b/src/pages/blog/blog.styles.scss
@@ -10,12 +10,10 @@
   color: red;
   }
 .shop-page{
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: auto;
 }
 @media screen and (max-width: 800px) {
   .shop-page{
-    margin-left: 0px;
-    margin-right: 0px;
+    margin: auto;
   }
 }
