--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -125,6 +125,35 @@
     flex-direction: column;
     margin-bottom: 40px;
  }
+ .photo-background {
+  display: flex;
+  flex-direction: row;
+  width: 120%;
+  margin-top: -120px;
+  border-radius: 4px;
+  transition: all 0.8s ease;
+  justify-content: center;
+ }
+ .photo-background2 {
+  display: flex;
+  flex-direction: row;
+  width: 120%;
+  margin-top: -10px;
+  margin-bottom: -40px;
+  border-radius: 4px;
+  transition: all 0.8s ease;
+  justify-content: center;
+ }
+ .photo-background3 {
+  position: absolute;
+  display: none;
+  flex-direction: row;
+  width: 120%;
+  margin-top: -5px;
+  border-radius: 4px;
+  transition: all 0.8s ease;
+  justify-content: center;
+ }
  .photo-box1{
    width: 100%;
    margin-bottom: 40px;
